clang/test/BSC/Negative/Ownership/Borrow/borrow_check_rules/borrow_live_longer_loop/borrow_live_longer_loop.cbs
// RUN: %clang_cc1 -verify %s

struct S1 { int a; };
struct S2 { int *owned b; };
struct S3 { struct S1 c; };

int rand();
void use_mut(int *borrow p);
T *owned safe_malloc<T>(T value);
void free_owned<T>(T *owned p);
void free(void*);

void test1() {
  int local = 42;
  int *borrow p = &mut local;
  while (rand()) {
    int local1 = 42;
    p = &mut local1; // expected-error {{`local1` does not live long enough}}
  } // expected-note {{`local1` dropped here while still borrowed}}
  use_mut(p);
}

void test2() {
  int local = 42;
  int *borrow p = &mut local;
  for (int i = 0; i < 5; ++i) {
    int local1 = 42;
    p = &mut local1; // expected-error {{`local1` does not live long enough}}
  } // expected-note {{`local1` dropped here while still borrowed}}
  use_mut(p);
}

void test3(int *borrow p) {
  while (rand()) {
    int local1 = 42;
    p = &mut local1; // expected-error {{`local1` does not live long enough}}
  } // expected-note {{`local1` dropped here while still borrowed}}
  use_mut(p);
}

void test4() {
  int local = 42;
  int *borrow p = &mut local;
  while (rand()) {
    if (rand()) {
      int local1 = 42;
      p = &mut local1; // expected-error {{`local1` does not live long enough}}
    } else { // expected-note {{`local1` dropped here while still borrowed}}
      int local2 = 42;
      p = &mut local2; // expected-error {{`local2` does not live long enough}}
    } // expected-note {{`local2` dropped here while still borrowed}}
  }
  use_mut(p);
}

void test5() {
  int *owned oriPtr = safe_malloc<int>(0);
  int *borrow p = &mut *oriPtr; // expected-note {{`*oriPtr` is borrowed here}}
  while (rand()) {
    if (rand()) {
      free_owned<int>(oriPtr); // expected-error {{cannot move out of `oriPtr` because it is borrowed}}
      use_mut(p);
    } else {
      free_owned<int>(oriPtr);
    }
    return;
  }
  free_owned<int>(oriPtr);
}

void test6() {
  int local = 42;
  int *borrow p = &mut local;
  while (rand()) {
    while (rand()) {
      for (int i = 0; i < 5; ++i) {
        int local1 = 42;
        p = &mut local1; // expected-error {{`local1` does not live long enough}}
      } // expected-note {{`local1` dropped here while still borrowed}}
    }
  }
  use_mut(p);
}

void test7() {
  int local = 42;
  int *borrow p = &mut local;
  while (rand()) {
    if (rand()) {
      for (int i = 0; i < 5; ++i) {
        int local1 = 42;
        p = &mut local1; // expected-error {{`local1` does not live long enough}}
      } // expected-note {{`local1` dropped here while still borrowed}}
    } else {
      for (int i = 0; i < 5; ++i) {
        int local2 = 42;
        p = &mut local2; // expected-error {{`local2` does not live long enough}}
      } // expected-note {{`local2` dropped here while still borrowed}}
    }
  }
  use_mut(p);
}

void test8() {
  int local = 42;
  int *borrow p = &mut local;
  while (rand()) {
    struct S1 s = { .a = 42 };
    p = &mut s.a; // expected-error {{`s.a` does not live long enough}}
  } // expected-note {{`s.a` dropped here while still borrowed}}
  use_mut(p);
}

void test9() {
  int local = 42;
  int *borrow p = &mut local;
  while (rand()) {
    struct S2 s = { .b = safe_malloc<int>(5) };
    p = &mut *s.b; // expected-error {{`*s.b` does not live long enough}} expected-note {{`*s.b` is borrowed here}}
    free_owned<int>(s.b); // expected-error {{cannot move out of `s.b` because it is borrowed}}
  } // expected-note {{`*s.b` dropped here while still borrowed}}
  use_mut(p);
}

void test10() {
  int local = 42;
  int *borrow p = &mut local;
  while (rand()) {
    struct S1 s1 = { .a = 42 };
    struct S3 s2 = { .c = s1 };
    p = &mut s2.c.a; // expected-error {{`s2.c.a` does not live long enough}}
  } // expected-note {{`s2.c.a` dropped here while still borrowed}}
  use_mut(p);
}